--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Money</title>
+    <title>Analyze</title>
     <link href="/static/css/2.fb7817b9.chunk.css" rel="stylesheet" />
     <link href="/static/css/main.66eb24a9.chunk.css" rel="stylesheet" />
   </head>
